--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -12,12 +12,8 @@
   </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <!--<{% for css_file in css_files %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/' ~ css_file %}">
-  {% endfor %}-->
 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/estilos.css' %}">
 
   <link rel="icon" href='{% static "img/senda.ico" %}'>
 
@@ -32,30 +28,36 @@
 
 </head>
 
-<body class="bg-secondary-subtle">
+<body>
   {% block body %}
   <div class="container-fluid text-center">
     <!-- Aside -->
     <div class="row align-items-start">
-      <div class="col-2 bg-success vh-100">
-        <a href="" class="sidebar-brand">Senda</a>
-        <!--
-        <div class="logo">
+      <div class="col-2 bg-success vh-100 p-0 text-start">
+        <a href="/../" class="sidebar-brand pt-2 pb-2">
 
           <img src="{% static 'img/senda.png' %}" alt="" width="100px" class="img-fluid rounded mx-auto d-block">
 
-        </div>
-        -->
-        <div class="menu">
-          {% block aside %}
-          <!--Menu Aside-->
-          <ul class="sidebar-nav">
-            <li class="sidebar-header">Menu</li>
-          </ul>
+        </a>
 
-          {% endblock %}
+        {% block aside %}
+        <!--Menu Aside-->
+        <ul class="sidebar-nav">
+          <li class="sidebar-header">Clientes</li>
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link"><i class="icon ion-md-person"></i>Crear Cliente</a>
+            <a href="#" class="sidebar-link"><i class="icon ion-md-person"></i>Listar Clientes</a>
+          </li>
+          <li class="sidebar-header">Servicio</li>
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link"><i class="icon ion-md-person"></i>Crear Cliente</a>
+            <a href="#" class="sidebar-link"><i class="icon ion-md-person"></i>Listar Clientes</a>
+          </li>
+        </ul>
 
-        </div>
+        {% endblock %}
+
+
       </div>
       <!-- Nav y Body -->
       <div class="col-10 p-0">
