--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   {% load static %}
@@ -10,57 +10,235 @@
 
     {% endblock %}
   </title>
+
+  <!--Boostrap, Iconos Boostrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <!--<{% for css_file in css_files %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/' ~ css_file %}">
-  {% endfor %}-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <!--Hoja de estilos-->
+  <link rel="stylesheet" type="text/css" href='{% static "css/styles.css" %}'>
 
+  <!--Icono-->
   <link rel="icon" href='{% static "img/senda.ico" %}'>
-
-  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
-  <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300&display=swap" rel="stylesheet">
-
 
 
 </head>
 
+<body>
+  <!--MENU-->
+  <div class="wrapper">
+    <aside id="sidebar">
+      <!--Contenido del sidebar-->
+      <div class="h-100">
+        <div class="sidebar-logo">
+          <a href="#">Senda</a>
+        </div>
+        <!--Menu sidebar-->
+        <ul class="sidebar-nav">
+          <li class="sidebar-header">
+            Opciones Generales
+          </li>
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link">
+              <i class="bi bi-person-lines-fill"></i>
+              Dashboard
+            </a>
+          </li>
 
+          <!--Menu con caida cascada-->
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link collapsed" data-bs-target="#pages" data-bs-toggle="collapse"
+              aria-expanded="false">
+              <i class="bi bi-file-earmark"></i>Pages</a>
+            <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Page 1</a>
+              </li>
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Page 2</a>
+              </li>
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Page 3</a>
+              </li>
+            </ul>
+          </li>
 
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link collapsed" data-bs-target="#post" data-bs-toggle="collapse"
+              aria-expanded="false">
+              <i class="bi bi-file-earmark"></i>Post</a>
+            <ul id="post" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Post 1</a>
+              </li>
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Post 2</a>
+              </li>
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Post 3</a>
+              </li>
+            </ul>
+          </li>
 
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link collapsed" data-bs-target="#cliente" data-bs-toggle="collapse"
+              aria-expanded="false">
+              <i class="bi bi-person-fill-gear"></i>Cliente</a>
+            <ul id="cliente" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Agregar</a>
+              </li>
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Modificar</a>
+              </li>
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">Listar</a>
+              </li>
+            </ul>
+          </li>
 
-<body class="bg-secondary-subtle">
-  {% block body %}
-  <div class="container-fluid text-center">
-    <!-- Aside -->
-    <div class="row align-items-start">
-      <div class="col-2 bg-success vh-100">
-        {% block aside %}{% include "aside.html"%}{% endblock %}
+          <!---->
+          <li class="sidebar-header">
+            Multi nivel
+          </li>
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link collapsed" data-bs-target="#menu" data-bs-toggle="collapse"
+              aria-expanded="false">
+              <i class="bi bi-person-fill-gear"></i>Multi Dropdown
+            </a>
+            <ul id="menu" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+
+              <a href="#" class="sidebar-link collapsed" data-bs-target="#nivel-1" data-bs-toggle="collapse"
+                aria-expanded="false">
+                Nivel 1
+              </a>
+
+              <ul id="nivel-1" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+                <li class="sidebar-item">
+                  <a href="#" class="sidebar-link">Nivel 1.1</a>
+                </li>
+                <li class="sidebar-item">
+                  <a href="#" class="sidebar-link">Nivel 1.2</a>
+                </li>
+                <li class="sidebar-item">
+                  <a href="#" class="sidebar-link">Nivel 1.3</a>
+                </li>
+
+              </ul>
+            </ul>
+
+          </li>
+
+        </ul>
       </div>
-      <!-- Nav y Body -->
-      <div class="col-10 p-0">
+    </aside>
+    <div class="main">
+      <!--Contenido del nav-->
+      <nav class="navbar navbar-expand px-3 border-bottom bg-light nav-light">
+        <button class="btn" id="sidebar-toggle" type="button">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse navbar">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
+                <img src="{% static 'img/Z.png' %}" alt="" class="avatar img-fluid rounded">
+              </a>
+              <div class="dropdown-menu dropdown-menu-end">
+                <a href="#" class="dropdown-item">Perfil</a>
+                <a href="#" class="dropdown-item">Informacion</a>
+                <a href="#" class="dropdown-item">Salir</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!--Contenido del main-->
+      <main class="content px-3 py-2">
+        <div class="container-fluid">
+          <div class="mb-3">
+            <h4>Panel Admin</h4>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 d-flex">
+              <div class="card flex-fill border-0 illustration">
+                <div class="card-body p-0 d-flex flex-fill">
+                  <div class="row g-0 w-100">
+                    <div class="col-6">
+                      <div class="p-3 m-1">
+                        <h4>Bienvenido de nuevo, Admin</h4>
+                        <p class="mb-0">Panel admin, senda</p>
+                      </div>
+                      <div class="col-6 align-self-end text-end">
 
-        {% block nav %}{% include "nav.html" %}{% endblock %}
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 d-flex">
+              <div class="card flex-fill border-0">
+                <div class="card-body py-4">
+                  <div class="d-flex align-items-start">
+                    <div class="flex-grow-1">
+                      <h4 class="mb-2">
+                        $ 78.00
+                      </h4>
+                      <p class="mb-2">
+                        Ganancias totales
+                      </p>
+                      <div class="mb-0">
+                        <span class="badge text-success me-2">
+                          +9.0%
+                        </span>
+                        <span class="text-muted">
+                          Olaa
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-        {% block section %} {% endblock %}
-
-      </div>
+            <div class="col-12 col-md-6 w-100">
+              <div class="card flex-fill border-0">
+                <div class="card-body py-4">
+                  <div class="d-flex align-items-start">
+                    <div class="flex-grow-1">
+                      <h4 class="mb-2">
+                        $ 78.00
+                      </h4>
+                      <p class="mb-2">
+                        Ganancias totales
+                      </p>
+                      <div class="mb-0">
+                        <span class="badge text-success me-2">
+                          +9.0%
+                        </span>
+                        <span class="text-muted">
+                          Olaa
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
-    {% endblock %}
+
   </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-  <script src="{% static 'js/gestionCliente.js' %}"></script>
+  <script src='{% static "js/scripts.js" %}'></script>
 </body>
 
 </html>
