--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   {% load static %}
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
   <!--Hoja de estilos-->
-  <link rel="stylesheet" type="text/css" href='{% static "css/styles.css" %}'>
+  <link rel="stylesheet" type="text/css" href='{% static "css/style.css" %}'>
 
   <!--Icono-->
   <link rel="icon" href='{% static "img/senda.ico" %}'>
@@ -31,8 +31,15 @@
     <aside id="sidebar">
       <!--Contenido del sidebar-->
       <div class="h-100">
-        <div class="sidebar-logo">
-          <a href="#">Senda</a>
+        <div class="sidebar-logo p-0 m-0">
+          <a href="#">
+
+
+            <div class="d-flex justify-content-center align-items-center" style="width: 264px; height: 64.4px;">
+              <img src="{% static 'img/senda.png' %}" class="p-0">
+
+
+          </a>
         </div>
         <!--Menu sidebar-->
         <ul class="sidebar-nav">
@@ -84,16 +91,13 @@
           <li class="sidebar-item">
             <a href="#" class="sidebar-link collapsed" data-bs-target="#cliente" data-bs-toggle="collapse"
               aria-expanded="false">
-              <i class="bi bi-person-fill-gear"></i>Cliente</a>
+              <i class="bi bi-person-fill-gear"></i> Gestion Clientes</a>
             <ul id="cliente" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
               <li class="sidebar-item">
-                <a href="#" class="sidebar-link">Agregar</a>
+                <a href="/cliente" class="sidebar-link">CRUD Cliente</a>
               </li>
               <li class="sidebar-item">
-                <a href="#" class="sidebar-link">Modificar</a>
-              </li>
-              <li class="sidebar-item">
-                <a href="#" class="sidebar-link">Listar</a>
+                <a href="#" class="sidebar-link">CRUD Inmueble</a>
               </li>
             </ul>
           </li>
@@ -158,9 +162,12 @@
       <main class="content px-3 py-2">
         <div class="container-fluid">
           <div class="mb-3">
+            {% block tmain %}
             <h4>Panel Admin</h4>
+            {% endblock %}
           </div>
           <div class="row">
+            {% block cmain %}
             <div class="col-12 col-md-6 d-flex">
               <div class="card flex-fill border-0 illustration">
                 <div class="card-body p-0 d-flex flex-fill">
@@ -227,6 +234,7 @@
                 </div>
               </div>
             </div>
+            {% endblock %}
           </div>
         </div>
       </main>
@@ -238,7 +246,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-  <script src='{% static "js/scripts.js" %}'></script>
+  <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 
 </html>
