--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+  {% block body %}
   <!--MENU-->
   <div class="wrapper">
     <aside id="sidebar">
@@ -47,10 +48,24 @@
             Opciones Generales
           </li>
           <li class="sidebar-item">
-            <a href="#" class="sidebar-link">
-              <i class="bi bi-person-lines-fill"></i>
-              Dashboard
+            <a href="/home" class="sidebar-link">
+              <i class="bi bi-house-fill"></i>
+              Home
             </a>
+          </li>
+
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link collapsed" data-bs-target="#cliente" data-bs-toggle="collapse"
+              aria-expanded="false">
+              <i class="bi bi-person-fill-gear"></i> Gestion Clientes</a>
+            <ul id="cliente" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+              <li class="sidebar-item">
+                <a href="/cliente" class="sidebar-link">CRUD Cliente</a>
+              </li>
+              <li class="sidebar-item">
+                <a href="#" class="sidebar-link">CRUD Inmueble</a>
+              </li>
+            </ul>
           </li>
 
           <!--Menu con caida cascada-->
@@ -84,20 +99,6 @@
               </li>
               <li class="sidebar-item">
                 <a href="#" class="sidebar-link">Post 3</a>
-              </li>
-            </ul>
-          </li>
-
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link collapsed" data-bs-target="#cliente" data-bs-toggle="collapse"
-              aria-expanded="false">
-              <i class="bi bi-person-fill-gear"></i> Gestion Clientes</a>
-            <ul id="cliente" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
-              <li class="sidebar-item">
-                <a href="/cliente" class="sidebar-link">CRUD Cliente</a>
-              </li>
-              <li class="sidebar-item">
-                <a href="#" class="sidebar-link">CRUD Inmueble</a>
               </li>
             </ul>
           </li>
@@ -147,7 +148,7 @@
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
               <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
-                <img src="{% static 'img/Z.png' %}" alt="" class="avatar img-fluid rounded">
+                <img src="{% static 'img/user.png' %}" alt="" class="avatar img-fluid rounded">
               </a>
               <div class="dropdown-menu dropdown-menu-end">
                 <a href="#" class="dropdown-item">Perfil</a>
@@ -161,7 +162,10 @@
       <!--Contenido del main-->
       <main class="content px-3 py-2">
         <div class="container-fluid">
-          <div class="mb-3">
+          <div class="d-flex pt-2 pb-2">
+            {% block volver %}
+            <a class="" href="../home"><i class="bi bi-arrow-left"></i></a>
+            {% endblock %}
             {% block tmain %}
             <h4>Panel Admin</h4>
             {% endblock %}
@@ -241,11 +245,13 @@
     </div>
 
   </div>
+  {% endblock %}
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+
   <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 
