--- a/core/templates/clientes/crudCliente.html
+++ b/core/templates/clientes/crudCliente.html
@@ -1,8 +1,12 @@
 {% extends "../base.html" %}
 {% load static %}
 
+{% block volver %}
+<a class="" href="../home"><i class="bi bi-arrow-left"></i></a>
+{% endblock %}
+
 {% block tmain %}
-<h4>CRUD Cliente</h4>
+<h4 class="mx-3">CRUD Cliente</h4>
 {% endblock %}
 
 {% block cmain %}
@@ -15,18 +19,22 @@
                 <div class="card-body">
                     <form action="/crearCliente/" method="POST"> {% csrf_token %}
                         <div class="form-group mb-3">
+                            <label for="txtCuitCuil">Cuit-Cuil</label>
                             <input type="text" id="txtCuitCuil" name="txtCuitCuil" class="form-control"
                                 placeholder="Cuit-Cuil" maxlength="30" required>
                         </div>
                         <div class="form-group mb-3">
+                            <label for="txtApellido">Apellido</label>
                             <input type="text" id="txtApellido" name="txtApellido" class="form-control"
                                 placeholder="Apellido" maxlength="45" required>
                         </div>
                         <div class="form-group mb-3">
+                            <label for="txtNombre">Nombre</label>
                             <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre"
                                 maxlength="45" required>
                         </div>
                         <div class="form-group mb-3">
+                            <label for="emailCorreo">Correo</label>
                             <input type="email" id="emailCorreo" name="emailCorreo" class="form-control"
                                 placeholder="Correo" maxlength="45" required>
                         </div>
@@ -85,6 +93,7 @@
                                 <td>{{c.cuil_cuit}}</td>
                                 <td>{{c.apellido}}</td>
                                 <td>{{c.nombre}}</td>
+
                                 <td><a href="/infoCliente/{{c.cuil_cuit}}" class="btn btn-sm btn-primary">+Info</a></td>
                             </tr>
                             {% endfor %}
