--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -46,7 +46,7 @@
             Opciones Generales
           </li>
           <li class="sidebar-item">
-            <a href="/home" class="sidebar-link">
+            <a href="/" class="sidebar-link">
               <i class="bi bi-house-fill"></i>
               Home
             </a>
@@ -151,7 +151,9 @@
               <div class="dropdown-menu dropdown-menu-end">
                 <a href="#" class="dropdown-item">Perfil</a>
                 <a href="#" class="dropdown-item">Informacion</a>
-                <a href="#" class="dropdown-item">Salir</a>
+                {% block salir %}
+                <a href="{% url 'salir' %}" class="dropdown-item">Salir</a> 
+                {% endblock salir %}
               </div>
             </li>
           </ul>
@@ -162,7 +164,7 @@
         <div class="container-fluid">
           <div class="d-flex pt-2 pb-2">
             {% block volver %}
-            <a class="" href="../home"><i class="bi bi-arrow-left"></i></a>
+            <a class="" href="../"><i class="bi bi-arrow-left"></i></a>
             {% endblock %}
             {% block tmain %}
             <h4>Panel Admin</h4>
