--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -64,6 +64,17 @@
                 <a href="#" class="sidebar-link">CRUD Inmueble</a>
               </li>
             </ul>
+          </li>   
+          <!--Empleado-->
+          <li class="sidebar-item">
+            <a href="#" class="sidebar-link collapsed" data-bs-target="#empleado" data-bs-toggle="collapse"
+              aria-expanded="false">
+              <i class="bi bi-person-fill-gear"></i> Gestion Empleado</a>
+            <ul id="empleado" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+              <li class="sidebar-item">
+                <a href="/empleado" class="sidebar-link">Empleado</a>
+              </li>
+            </ul>
           </li>
 
           <!--Menu con caida cascada-->
