--- a/core/templates/empleado/crudEmpleado.html
+++ b/core/templates/empleado/crudEmpleado.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block tmain %}
-<h4 class="mx-3">Gestion Cliente</h4>
+<h4 class="mx-3">Gestion Empleado</h4>
 {% endblock %}
 
 {% block cmain %}
@@ -14,13 +14,13 @@
 <div class="col-12 col-md-4">
     <div class="card flex-fill border-0">
         <div class="card-body py-4">
-            <h4>Crear Cliente</h4>
+            <h4>Crear Empleado</h4>
             <div class="card">
                 <div class="card-body">
-                    <form action="/crearCliente/" method="POST"> {% csrf_token %}
+                    <form action="/crearEmpleado/" method="POST"> {% csrf_token %}
                         <div class="form-group mb-3">
-                            <label for="txtCuitCuil">Cuit-Cuil</label>
-                            <input type="text" id="txtCuitCuil" name="txtCuitCuil" class="form-control"
+                            <label for="numLegajo">Legajo</label>
+                            <input type="number" id="numLegajo" name="numLegajo" class="form-control"
                                 placeholder="Cuit-Cuil" maxlength="30" required>
                         </div>
                         <div class="form-group mb-3">
@@ -34,22 +34,14 @@
                                 maxlength="45" required>
                         </div>
                         <div class="form-group mb-3">
+                            <label for="txtCuil">Cuil</label>
+                            <input type="text" id="txtCuil" name="txtCuil" class="form-control"
+                                placeholder="Cuil" maxlength="30" required>
+                        </div>
+                        <div class="form-group mb-3">
                             <label for="emailCorreo">Correo</label>
                             <input type="email" id="emailCorreo" name="emailCorreo" class="form-control"
                                 placeholder="Correo" maxlength="45" required>
-                        </div>
-                        <div class="form-group">
-
-                            <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="cpHabitual">
-                                <label class="form-check-label" for="cpHabitual">Habitual</label>
-                            </div>
-
-                            <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="cpGubernamental">
-                                <label class="form-check-label" for="cpGubernamental">Gubernamental</label>
-                            </div>
-
                         </div>
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-primary btn-block text-white">Crear</button>
@@ -65,10 +57,9 @@
     <div class="card flex-fill border-0">
         <div class="card-body py-4">
 
-
             <div class="d-flex">
                 <div class="d-grid gap-1">
-                    <h4>Listado de Clientes</h4>
+                    <h4>Listado de Empleados</h4>
 
                 </div>
             </div>
@@ -80,21 +71,21 @@
                         <thead>
                             <tr class="table-primary">
                                 <th>#</th>
-                                <th>Cuit-Cuil</th>
+                                <th>Legajo</th>
                                 <th>Apellido</th>
                                 <th>Nombre</th>
                                 <th colspan="">Opciones</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for c in clientes %}
+                            {% for c in Empleado %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
-                                <td>{{c.cuil_cuit}}</td>
+                                <td>{{c.cuil}}</td>
                                 <td>{{c.apellido}}</td>
                                 <td>{{c.nombre}}</td>
 
-                                <td><a href="/infoCliente/{{c.cuil_cuit}}" class="btn btn-sm btn-primary">+Info</a></td>
+                                <td><a href="/infoEmpleado/{{c.cuil}}" class="btn btn-sm btn-primary">+Info</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
