--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -15,7 +15,7 @@
                 </div>
 
             </div>
-            <form action="" method=" get">
+            <form action="{% url 'home' %}" method=" get">
                 <div class="form-group mb-3">
                     <label for="txtUsuario">Usuario</label>
                     <input type="text" id="txtUsuario" name="txtUsuario" class="form-control" placeholder="Usuario"
@@ -26,7 +26,7 @@
                     <input type="password" id="passContraseña" name="passContraseña" class="form-control"
                         placeholder="Contraseña" maxlength="45" required>
                 </div>
-                <input type="button" class="btn btn-success w-100 mt-2" value="Ingresar">
+                <input type="submit" class="btn btn-success w-100 mt-2" value="Ingresar">
             </form>
         </div>
     </div>
