--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -60,7 +60,7 @@
                 <a href="/cliente" class="sidebar-link">CRUD Cliente</a>
               </li>
               <li class="sidebar-item">
-                <a href="#" class="sidebar-link">CRUD Inmueble</a>
+                <a href="/inmuebles" class="sidebar-link">CRUD Inmueble</a>
               </li>
             </ul>
           </li>
