--- a/core/templates/clientes/infoCliente.html
+++ b/core/templates/clientes/infoCliente.html
@@ -14,6 +14,16 @@
 <div class="col-12 col-md-4">
     <div class="card flex-fill border-0">
         <div class="card-body py-4">
+            {% if messages %}
+                {% for msg in messages %}
+
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong>Hey!</strong> {{ msg }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                    
+                {% endfor %}
+            {% endif %}
             <h4>Modificacion de Cliente</h4>
             <div class="card">
                 <div class="card-body">
@@ -89,8 +99,6 @@
                             <tr class="table-primary">
                                 <th>#</th>
                                 <th>Domicilio</th>
-                                <th>Metros</th>
-                                <th>Nro Ambientes</th>
                                 <th>Tipo</th>
                                 <th colspan="">Opciones</th>
                             </tr>
@@ -99,10 +107,9 @@
                             {% for i in inmuebles %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
-                                <td>{{c.cuil_cuit}}</td>
-                                <td>{{c.apellido}}</td>
-                                <td>{{c.nombre}}</td>
-                                <td><a href="/infoCliente/{{c.cuil_cuit}}" class="btn btn-sm btn-primary">+Info</a></td>
+                                <td>{{i.domicilio}}</td>
+                                <td>{{i.tipo}}</td>
+                                <td><a href="/infoInmueble/{{cliente}}" class="btn btn-sm btn-primary">+Info</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
