--- a/core/templates/clientes/inmuebles.html
+++ b/core/templates/clientes/inmuebles.html
@@ -1,7 +1,7 @@
 {% extends "../base.html" %}
 
 {% block tmain %}
-<h4 class="mx-3">CRUD Cliente</h4>
+<h4 class="mx-3">Gestion Inmuebles Cliente</h4>
 {% endblock %}
 
 {% block cmain %}
