--- a/core/templates/clientes/crudCliente.html
+++ b/core/templates/clientes/crudCliente.html
@@ -7,7 +7,7 @@
 
 {% block cmain %}
 
-<div class="col-12 col-md-4">
+<div class="col-12 col-md-7 mx-auto">
     <div class="card flex-fill border-0">
         <div class="card-body py-4">
             
@@ -60,50 +60,6 @@
                             <button type="submit" class="btn btn-primary btn-block text-white">Crear</button>
                         </div>
                     </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="col-12 col-md-8 d-flex">
-    <div class="card flex-fill border-0">
-        <div class="card-body py-4">
-
-
-            <div class="d-flex">
-                <div class="d-grid gap-1">
-                    <h4>Listado de Clientes</h4>
-
-                </div>
-            </div>
-
-
-            <div class="d-flex align-items-start">
-                <div class="flex-grow-1">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr class="table-primary">
-                                <th>#</th>
-                                <th>Cuit-Cuil</th>
-                                <th>Apellido</th>
-                                <th>Nombre</th>
-                                <th colspan="">Opciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for c in clientes %}
-                            <tr>
-                                <td>{{forloop.counter}}</td>
-                                <td>{{c.cuil_cuit}}</td>
-                                <td>{{c.apellido}}</td>
-                                <td>{{c.nombre}}</td>
-
-                                <td><a href="/infoCliente/{{c.cuil_cuit}}" class="btn btn-sm btn-primary">+Info</a></td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
                 </div>
             </div>
         </div>
