--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -280,12 +280,16 @@
   </div>
   {% endblock %}
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 
   <script src="{% static 'js/scripts.js' %}"></script>
+
+  {% block extrajs %}
+  {% endblock %}
 </body>
 
 </html>
