--- a/core/templates/clientes/cliente_modal.html
+++ b/core/templates/clientes/cliente_modal.html
@@ -1,19 +1,17 @@
-<div class="modar-dialog modal-lg" role="document">
+<div class="modal-dialog"  role="document">
     <div class="modal-content">
-        <div class="modal-header">
-            <h2 class="modal-title">Edicion Cliente: {{ object }}</h2>
-            <button class="close" type="button" data-dismiss="modal" aria-label="close">
-            </button>
+      <div class="modal-header">
+        <h4 class="mx-3">Edicion Cliente: {{ object }}</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form action="{% url 'modificarCliente' object.cuil_cuit %}" method="POST">
+        {% csrf_token %}
+        <div class="modal-body">
+            {{ form.as_p }}
         </div>
-        <form action="{% url 'modificarCliente' object.cuil_cuit %}" method="POST">
-            {% csrf_token %}
-            <div class="modal-body">
-                {{ form.as_p }}
-            </div>
-            <div class="model-footer">
-                <button class="btn btn-primary" type="sumbit">Confirmar</button>
-                <button class="btn btn-danger" type="button" data-dismiss="modal">Cancelar</button>
-            </div>
-        </form>
+          <div class="modal-footer">
+        <button type="submit" class="btn {{btnColor}}">{{boton}}</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+      </div>
     </div>
-</div>
+  </div>
