--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% extends "../base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block body %}
 
@@ -28,16 +29,7 @@
 
             <form method="post" action="">
                 {% csrf_token %}
-                <div class="form-group mb-3">
-                    <label for="txtUsuario">Usuario</label>
-                    <input type="text" id="txtUsuario" name="username" class="form-control" placeholder="Usuario"
-                        maxlength="30" required>
-                </div>
-                <div class="form-group mb-3">
-                    <label for="passContraseña">Contraseña</label>
-                    <input type="password" id="passContraseña" name="password" class="form-control"
-                        placeholder="Contraseña" maxlength="45" required>
-                </div> 
+                {{ form | crispy }}
                 <button type="submit" class="btn btn-success w-100 mt-2" value="Ingresar">Ingresar</button>
             </form>
         </div>
