--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -6,9 +6,8 @@
 
 <div class="container-fluid login">
     <!-- Contenido de tu página -->
-<!--XD-->
     <div class="m-0 vh-100 row justify-content-center align-items-center">
-        <div class="col-auto px-5 pb-5 pt-3"
+        <div class="col-4 px-5 pb-5 pt-3"
             style="background-color: rgba(255, 255, 255, 0.7); border: 1px solid #ccc; border-radius: 10px;">
             <div class="row">
                 <div class="col">
