--- a/core/templates/clientes/cliente_form.html
+++ b/core/templates/clientes/cliente_form.html
@@ -1,6 +1,6 @@
 {% extends "../base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags %} <!--Crispy PONER SI O SI-->
 
 {% block tmain %}
     <h4 class="mx-3">{{ titulo }}</h4>
