--- a/core/templates/clientes/cliente_modal.html
+++ b/core/templates/clientes/cliente_modal.html
@@ -1,3 +1,5 @@
+{% load crispy_forms_tags %}
+
 <div class="modal-dialog"  role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -7,7 +9,7 @@
       <form action="{% url 'modificarCliente' object.cuil_cuit %}" method="POST">
         {% csrf_token %}
         <div class="modal-body">
-            {{ form.as_p }}
+            {{ form | crispy }}
         </div>
           <div class="modal-footer">
         <button type="submit" class="btn {{btnColor}}">{{boton}}</button>
