--- a/core/templates/core/producto_form.html
+++ b/core/templates/core/producto_form.html
@@ -1,15 +1,36 @@
-{% comment "" %} {% extends "basecrud.html" %}{% endcomment %}
-
+{% extends "../base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 
 {% block title %} {{ titulo }} {% endblock %}
 
+{% block tmain %}
+    <h4 class="mx-3">{{ titulo }}</h4>
+{% endblock %}
 
-{% block section %}
-    <form method="POST">
-        {% csrf_token %}
-        {{form}}
-        <button type="submit">Guardar</button>
-    </form>
+{% block cmain %}
+    <div class="col-12 col-md-7 mx-auto">
+        <div class="card flex-fill border-0">
+            <div class="card-body py-4">
+                
+                {% for msg in messages %}
+
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong>Hey!</strong> {{ msg }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                    
+                {% endfor %}
+                <h4>{{ titulo }}</h4>
+                <div class="card">
+                    <div class="card-body">
+
+                        {% crispy form form.helper %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
